# Taxi_Demand_Predictor

./: pyproject.toml
notebooks/: 01_load_and_validate_raw_data.ipynb
scripts/: training_pipeline.py
src/: .env  config.py  feature_store_api.py  frontend.py  inference.py
