[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sai <saiprakash.spr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
requests = "^2.31.0"
pyarrow = "^13.0.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.0"
xgboost = "^2.0.0"
lightgbm = "^4.1.0"
optuna = "^3.3.0"
python-dotenv = "^1.0.0"
streamlit = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
